--- a/client/src/components/Coins/Coins.module.css
+++ b/client/src/components/Coins/Coins.module.css
@@ -4,7 +4,10 @@
 }
 
 
-  
+  .container_table {
+    width: 100%;
+
+  }
 
   .ul_modal{
     text-align: center;
@@ -12,9 +15,7 @@
 
   .table {
     max-height: 400px;
-    width: 100%;
-    max-width: 100%;
-    overflow-y:  auto;
+    overflow-y:  scroll;
 
   }
  .laptop_trading{
@@ -25,6 +26,6 @@
     .table {
       max-height: 400px;
       max-width: 300px;
-      overflow:  auto;
+
     } 
   }
